--- a/index.html
+++ b/index.html
@@ -153,11 +153,12 @@
           <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">So...who wrote this useless crap?</h2>
+            <h2 class="section-heading">Who wrote this useless piece of crap?</h2>
             <p class="lead">
-              Well, I'm a terrible programmer. Who only knows Python. But is trying to learn other stuff. A certain
+              Well, I'm simply a terrible programmer. Who only knows Python. But is trying to learn other stuff. A certain
               <a href = "https://derpz.ga/2017/10/rant-of-the-nuode-site/"> rant </a>
-              about how some dude simply copied code off the internet to make his website. So, as someone with no HTML experiece whatsoever,I was inspired to do just that
+              about how some dude simply copied code off the internet to make his website. 
+              So, as someone with no HTML experiece whatsoever, I was inspired to do just that.
             </p>
           </div>
           <div class="col-lg-5 mr-auto">
@@ -177,9 +178,13 @@
           <div class="col-lg-5 mr-auto order-lg-2">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-            <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by
-              <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+            <h2 class="section-heading">So... how much code did you copy?</h2>
+            <p class="lead"> 
+              For starters, the entire format of this page was
+              made using someone else's Bootstrap code, 
+              and the typing effect seen earlier was also copied and pasted.
+              I don't even know how to affect the cursor speed!
+            </p>
           </div>
           <div class="col-lg-5 ml-auto order-lg-1">
             <img class="img-fluid" src="img/dog.png" alt="">
