--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               Well, I'm simply a terrible programmer. Who only knows Python. But is trying to learn other stuff. A certain
               <a href = "https://derpz.ga/2017/10/rant-of-the-nuode-site/"> rant </a>
               about how some dude simply copied code off the internet to make his website. 
-              So, as someone with no HTML experiece whatsoever, I was inspired to do just that.
+              So, as someone with no HTML, CSS, or JS experiece whatsoever, I was inspired to do just that.
             </p>
           </div>
           <div class="col-lg-5 mr-auto">
@@ -181,9 +181,9 @@
             <h2 class="section-heading">So... how much code did you copy?</h2>
             <p class="lead"> 
               For starters, the entire format of this page was
-              made using someone else's Bootstrap code, 
+              made using someone else's Bootstrap code, online fonts
               and the typing effect seen earlier was also copied and pasted.
-              I don't even know how to affect the cursor speed!
+              Hell, I don't even know how to affect the cursor speed!
             </p>
           </div>
           <div class="col-lg-5 ml-auto order-lg-1">
@@ -205,10 +205,11 @@
           <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-            <p class="lead">This template features the 'Lato' font, part of the
-              <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as
-              <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+            <h2 class="section-heading">Apps and Posts! Yay! Meaning!</h2>
+            <p class="lead">
+              I plan to include my existing Python projects, and future projects (hopefully not just Python?) on here,
+              as well as posts about stuff. What stuff? No idea. Did not have a plan going into this.
+            </p>
           </div>
           <div class="col-lg-5 mr-auto ">
             <img class="img-fluid" src="img/phones.png" alt="">
