--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </li>
             <li class="list-inline-item">
               <a href="https://www.facebook.com/heng.tengyi" class="btn btn-secondary btn-lg">
-                <i class="fa fa-facebook fa-fw"></i>
+                <i class="glyphicon glyphicon-shopping-cart"></i>
                 <span class="network-name">Facebook</span>
               </a>
             </li>
