--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.facebook.com/heng.tengyi" class="btn btn-secondary btn-lg">
-                <i class="glyphicon glyphicon-shopping-cart"></i>
-                <span class="network-name">Facebook</span>
+              <a href="https://carousell.com/randumbrider/" class="btn btn-secondary btn-lg">
+                <a href="#">
+                  <span class="glyphicon glyphicon-shopping-cart"></span>
+                </a>
+                <span class="network-name">Carousell</span>
               </a>
             </li>
             <li class="list-inline-item">
