--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <header class="intro-header">
       <div class="container">
         <div class="intro-message">
-          <h1>CodeSpam</h1>
+          <h1>Your mum gay lol.</h1>
           <div class="typewriter">
             <h5 style = "text-align:center; color:#fff;text-decoration: none;">
               <a class="typewrite" data-period="1000" data-type='[ "An absolutely pointless site.", "By an absolutely useless person." ]'>
