--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
             </li>
             <li class="list-inline-item">
               <a href="https://carousell.com/randumbrider/" class="btn btn-secondary btn-lg">
-                <a href="#">
-                  <span class="glyphicon glyphicon-shopping-cart"></span>
-                </a>
+                  <i class="glyphicon glyphicon-shopping-cart"></i>
                 <span class="network-name">Carousell</span>
               </a>
             </li>
