--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
@@ -54,7 +55,7 @@
     <header class="intro-header">
       <div class="container">
         <div class="intro-message">
-          <h1>Your mum gay lol.</h1>
+          <h1>CodeSpam</h1>
           <div class="typewriter">
             <h5 style = "text-align:center; color:#fff;text-decoration: none;">
               <a class="typewrite" data-period="1000" data-type='[ "An absolutely pointless site.", "By an absolutely useless person." ]'>
@@ -72,7 +73,7 @@
             </li>
             <li class="list-inline-item">
               <a href="https://carousell.com/randumbrider/" class="btn btn-secondary btn-lg">
-                  <i class="glyphicon glyphicon-shopping-cart"></i>
+                <i class="glyphicon glyphicon-shopping-cart"></i>
                 <span class="network-name">Carousell</span>
               </a>
             </li>
