--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container">
+
         <a class="navbar-brand" href="https://hty2003.github.io">CodeSpam</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,7 @@
             </li>
           </ul>
         </div>
-      </div>
+
     </nav>
 
     <!-- Header -->
@@ -181,12 +181,12 @@
                <span class="network-name">Instagram</span>
                </a>
               </li>
-              <li class="list-inline-item">
-                <a href="https://www.facebook.com/heng.tengyi" class="btn btn-secondary btn-lg">
-                  <i class="fa fa-facebook fa-fw"></i>
-                  <span class="network-name">Facebook</span>
-                </a>
-              </li>
+                <li class="list-inline-item">
+                 <a href="https://carousell.com/randumbrider/" class="btn btn-secondary btn-lg">
+                  <i class="glyphicon glyphicon-shopping-cart"></i>
+                   <span class="network-name">Carousell</span>
+                 </a>
+                </li>
               <li class="list-inline-item">
                 <a href="https://github.com/HTY2003/" class="btn btn-secondary btn-lg">
                   <i class="fa fa-github fa-fw"></i>
