--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-
+      <div class="container">
         <a class="navbar-brand" href="https://hty2003.github.io">CodeSpam</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -48,8 +47,6 @@
             </li>
           </ul>
         </div>
-
-    </nav>
 
     <!-- Header -->
     <header class="intro-header">
