--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <body>
 
     <!-- Navigation -->
+     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="https://hty2003.github.io">CodeSpam</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +48,8 @@
             </li>
           </ul>
         </div>
-
+       
+        </nav>
     <!-- Header -->
     <header class="intro-header">
       <div class="container">
