--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- Custom styles for this template -->
     <link href="css/landing-page.css" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/typewriter.css">
+    <link rel = "stylesheet" href = "stylesheets/bootstrap.min.css">
     <style>
       body{text-decoration: none;}
     </style>
