--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="css/landing-page.css" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/typewriter.css">
-    <link rel = "stylesheet" href = "stylesheets/bootstrap.min.css">
+    <link rel = "stylesheet" href = "stylesheets/bootstrap.css">
     <style>
       body{text-decoration: none;}
     </style>
