--- a/index.html
+++ b/index.html
@@ -20,10 +20,21 @@
     <!-- Custom styles for this template -->
     <link href="css/landing-page.css" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/typewriter.css">
-    <link rel = "stylesheet" href = "stylesheets/bootstrap.css">
     <style>
-      body{text-decoration: none;}
-    </style>
+          body{text-decoration: none;}
+        </style>
+        .navbar.navbar-default {
+        background-color: #99ccff;
+        border: 0;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+
+    .navbar.navbar-default .navbar-collapse {
+        border: 0;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
   </head>
 
   <body>
