--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title> CodeSpam </title>
     <link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
