--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
             <li class="list-inline-item">
               <a href="https://carousell.com/randumbrider/" class="btn btn-secondary btn-lg">
                 <i class="glyphicon glyphicon-shopping-cart"></i>
-                <span class="network-name">Carousell</span>
+                <span class="network-name">
+                  <span class="glyphicon glyphicon-envelope"></span>
+                  Carousell
+                </span>
               </a>
             </li>
             <li class="list-inline-item">
