--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <a href="https://carousell.com/randumbrider/" class="btn btn-secondary btn-lg">
                 <i class="glyphicon glyphicon-shopping-cart"></i>
                 <span class="network-name">
-                  <span class="glyphicon glyphicon-envelope"></span>
+                  <p><span class="glyphicon glyphicon-envelope"></span></p>
                   Carousell
                 </span>
               </a>
