--- a/ss.html
+++ b/ss.html
@@ -29,7 +29,7 @@
     
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: img/foreign worker.jpg">
+    <header class="masthead" style="background-image: url(img/foreign worker.jpg)">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
