--- a/ss.html
+++ b/ss.html
@@ -131,6 +131,11 @@
 		<p>Since the influx of immigrants is integral to Singapore’s development, a better solution than reducing the number of immigrants would be to solve the infrastructural problems within our existing policies to better accommodate foreign workers within Singapore.</p>			
 
 		<p>For example, to solve the problem of competition with foreign workers over jobs, the government can upgrade the skills of Singaporean workers with programmes like SkillsFuture, allowing them to enter higher-skilled jobs and sectors, while the foreign workers can continue working in the labour-intensive sectors like construction. </p>			
+		
+		<a href="#">
+              		<img class="img-fluid" src="img/skillfuture.png" alt="">
+            	</a>
+            	<span class="caption text-muted">SkillsFuture - one of the schemes to help Singaporean improve their skills in the workplace</span>
 
 		<p>Unlike policies like the Foreign Worker Levy system, this action would reduce competition without sacrificing the number of foreign workers immigrating into Singapore.</p>			
 
@@ -142,7 +147,7 @@
 
 		<p>Through these infrastructural changes, the negative impacts felt by both locals and foreign workers will be reduced, allowing for the standard of living on both sides to increase. If the people have less problems to complain about, we can reduce hatred, and xenophobia amongst the people, making sure events like the Little India Riot don’t happen again.</p>	
 
-	    <h4 class="section-heading">Improve Infrastructure to Accomodate the Foreign Workers</h4>
+	    <h4 class="section-heading">Educate our Youth</h4>
 
 		<p>Sure, this sounds overdone, but educating Singaporean youths against xenophobia towards foreign workers would make a huge difference in the fight against this discrimination. If we can advocate a understanding and acceptance of other cultures in Singapore, less people would suffer from xenophobia, curbing the problem of discrimination towards foreign workers.</p>			
 
