--- a/ss.html
+++ b/ss.html
@@ -79,9 +79,7 @@
 			
 	    	<p>Furthermore, the number of foreign workers has been increasing steadily. As of June 2014, the foreign population of Singapore, consisting of permanent residents(PRs) as well as non-residents with work visas, and foreign students, took up 38.9% of Singapore’s total population of 5.47 million, comprising a huge part of the population (“Population in Brief 2014”, 2014).</p>            
 			
-		<a href="#">
-              		<img class="img-fluid" src="img/group.jpg" alt="">
-            	</a>
+              	<img src="img/group.jpg" alt="">
             	<span class="caption text-muted">A large group (but a small percentage) of foreign workers in Singapore heading off to work</span>
 
 	    	<p>Clearly, foreign immigrants play a large role in Singaporean society, a role that gets larger each year as they take up more of the population and workforce.</p>
@@ -94,9 +92,7 @@
             
 		<p>Most foreign workers do not mix well with Singaporeans, with various accents and features. In addition, the majority of foreign workers in Singapore work in the domestic services or construction industries. This places them in the bottom 10% of Singapore’s population in terms of income, also leading them to work and live under poor conditions. </p>
            	
-		<a href="#">
-             		<img class="img-fluid" src="img/dorm.jpg" alt="">
-            	</a>
+             	<img class="img-fluid" src="img/dorm.jpg" alt="">
             	<span class="caption text-muted">The hard life of a foreign worker in Singapore</span>
 
             	<p>With so many cultural, racial, and socio-economic differences between the two groups, the biases and prejudices between the two groups are widening, worsening the negative perceptions of the social issues listed below.</p>
@@ -121,9 +117,7 @@
 
 		<p>From this incident, unprecedented in over 40 years, the prejudices and underlying hatred between foreign workers and immigrants were highlighted. Several anti-immigrant and xenophobic messages, like the one below, were posted online for everyone to see.</p>
 		
-		<a href="#">
-              		<img class="img-fluid" src="img/post.jpg" alt="">
-            	</a>
+              	<img class="img-fluid" src="img/post.jpg" alt="">
             	<span class="caption text-muted">One of the many spiteful and xenophobic reactions to the Little India riots</span>
 
 	    <h2 class="section-heading">Finding A Balance</h2>
@@ -142,9 +136,7 @@
 
 		<p>For example, to solve the problem of competition with foreign workers over jobs, the government can upgrade the skills of Singaporean workers with programmes like SkillsFuture, allowing them to enter higher-skilled jobs and sectors, while the foreign workers can continue working in the labour-intensive sectors like construction. </p>			
 		
-		<a href="#">
-              		<img class="img-fluid" src="img/skillfuture.png" alt="">
-            	</a>
+              	<img class="img-fluid" src="img/skillfuture.png" alt="">
             	<span class="caption text-muted">SkillsFuture - one of the schemes to help Singaporean improve their skills in the workplace</span>
 
 		<p>Unlike policies like the Foreign Worker Levy system, this action would reduce competition without sacrificing the number of foreign workers immigrating into Singapore.</p>			
