--- a/ss.html
+++ b/ss.html
@@ -92,7 +92,7 @@
             
 		<p>Most foreign workers do not mix well with Singaporeans, with various accents and features. In addition, the majority of foreign workers in Singapore work in the domestic services or construction industries. This places them in the bottom 10% of Singapore’s population in terms of income, also leading them to work and live under poor conditions. </p>
            	
-             	<img class="img-fluid" src="img/dorm.jpg" alt="">
+             	<img class="img-fluid" src="img/dorm.jpg" alt="" height="400" width="600">
             	<span class="caption text-muted">The hard life of a foreign worker in Singapore</span>
 
             	<p>With so many cultural, racial, and socio-economic differences between the two groups, the biases and prejudices between the two groups are widening, worsening the negative perceptions of the social issues listed below.</p>
