--- a/index.html
+++ b/index.html
@@ -149,10 +149,33 @@
           <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">Apps and Posts! Yay! Meaning!</h2>
+            <h2 class="section-heading">Apps and Posts! Yay!</h2>
             <p class="lead">
               I plan to include my existing Python projects, and future projects (hopefully not just Python?) on here,
               as well as posts about stuff. What stuff? No idea. Did not have a plan going into this.
+            </p>
+          </div>
+          <div class="col-lg-5 mr-auto ">
+            <img class="img-fluid" src="img/Logo (1).jpg" alt="">
+          </div>
+        </div>
+
+      </div>
+      <!-- /.container -->
+
+    </section>
+      
+       <section class="content-section-b">
+
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-5 ml-auto">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">Advertising... RIchCoin</h2>
+            <p class="lead">
+              A good cryptocurrency, which is being developed, better than Robert's 25 bitcoins tbh.
             </p>
           </div>
           <div class="col-lg-5 mr-auto ">
